<resources>
    <string name="app_name">.tumkhanom</string>
    <string name="show_all">Show all</string>
    <string name="icon">icon</string>
    <string name="icon_button">icon button</string>
    <string name="intro_text">\tExplore the sweetness of Thailand through desserts from all 4 regions - North, Northeast, Central, and South.
        \n\tFrom colorful sticky rice to creamy coconut treats, each recipe shares a story of Thai culture and flavor.</string>
    <string name="all">All</string>
    <string name="north">North</string>
    <string name="northeast">Northeast</string>
    <string name="central">Central</string>
    <string name="south">South</string>
    <string name="ingredients">Ingredients</string>
    <string name="quantity">Quantity</string>
    <string name="ingredient">Ingredient</string>
</resources>