<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListPage"
    android:background="@color/cream"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/clickable_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/icon_tumkhanom_coral"
            android:contentDescription="@string/icon_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/account_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/icon_account_coral"
            android:contentDescription="@string/icon_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/clickable_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/afacad_semibold"
            android:hint="Search dessert..."
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/account_icon"
            app:layout_constraintStart_toEndOf="@+id/clickable_icon"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:singleSelection="true"
        app:selectionRequired="false"
        app:chipSpacingHorizontal="2dp"
        app:chipSpacingVertical="2dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAll"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            app:fontFamily="@font/afacad_semibold"
            android:text="@string/all"
            android:textAlignment="center"
            app:chipBackgroundColor="@color/chip_bg_selector"
            android:textColor="@color/chip_text_selector"
            app:checkedIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipNorth"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            app:fontFamily="@font/afacad_semibold"
            android:text="@string/north"
            android:textAlignment="center"
            app:chipBackgroundColor="@color/chip_bg_selector"
            android:textColor="@color/chip_text_selector"
            app:checkedIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipNortheast"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            app:fontFamily="@font/afacad_semibold"
            android:text="@string/northeast"
            android:textAlignment="center"
            app:chipBackgroundColor="@color/chip_bg_selector"
            android:textColor="@color/chip_text_selector"
            app:checkedIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCentral"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            app:fontFamily="@font/afacad_semibold"
            android:text="@string/central"
            android:textAlignment="center"
            app:chipBackgroundColor="@color/chip_bg_selector"
            android:textColor="@color/chip_text_selector"
            app:checkedIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSouth"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            app:fontFamily="@font/afacad_semibold"
            android:text="@string/south"
            android:textAlignment="center"
            app:chipBackgroundColor="@color/chip_bg_selector"
            android:textColor="@color/chip_text_selector"
            app:checkedIconVisible="false" />

    </com.google.android.material.chip.ChipGroup>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dessertRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="@+id/chipGroup"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/chipGroup"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup" />
    </ScrollView>

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:background="@drawable/button_coral"
        app:backgroundTint="@null"
        android:fontFamily="@font/afacad_semibold"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>