<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage"
    android:background="@color/cream"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/clickable_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/icon_tumkhanom_coral"
            android:contentDescription="@string/icon_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/account_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/icon_account_coral"
            android:contentDescription="@string/icon_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/clickable_icon"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/intro_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/afacad_semibold"
        android:padding="6dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/intro_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro_text"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <!-- North Button -->
            <Button
                android:id="@+id/button_north"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_margin="8dp"
                android:text="North"
                android:textSize="24dp"
                android:padding="4dp"
                android:background="@drawable/button_coral"
                android:fontFamily="@font/afacad_bold"
                app:backgroundTint="@null" />

            <!-- Northeast Button -->
            <Button
                android:id="@+id/button_northeast"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_margin="8dp"
                android:text="Northeast"
                android:textSize="24dp"
                android:padding="4dp"
                android:fontFamily="@font/afacad_bold"
                android:background="@drawable/button_coral"
                app:backgroundTint="@null" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_central"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_margin="8dp"
                android:text="Central"
                android:textSize="24dp"
                android:padding="4dp"
                android:fontFamily="@font/afacad_bold"
                android:background="@drawable/button_coral"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/button_south"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_margin="8dp"
                android:text="South"
                android:textSize="24dp"
                android:padding="4dp"
                android:fontFamily="@font/afacad_bold"
                android:background="@drawable/button_coral"
                app:backgroundTint="@null" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_show_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_coral"
        android:fontFamily="@font/afacad_semibold"
        android:text="@string/show_all"
        android:textSize="16dp"
        android:layout_marginTop="8dp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>